# parallel_text_viewer

./: .gitignore  API_REFERENCE.md  ARCHITECTURE_OPTIMIZATION_PLAN.md  CHANGELOG.md  CLEANUP_PLAN.md  COMPLETION_SUMMARY.md  FINAL_STATUS_REPORT.md  LICENSE  README.md  data  naming_rule_demo_2930.json  pyproject.toml  setup.py
demo/: demo.py  demo_story_en.md
examples/: build_api_usage.py
parallel_text_viewer/: __init__.py  __main__.py  cli.py  core.py  generators.py  renderer.py  utils.py
parallel_text_viewer/cli/: __init__.py  dispatcher.py  parser.py
parallel_text_viewer/config/: __init__.py  generator.py
parallel_text_viewer/core/: __init__.py  build.py  config_v2.py  image_placeholder.py  path_resolver.py  text_processor.py  validator.py
parallel_text_viewer/generators/: __init__.py  base.py  book_index.py  factory.py  navigation.py  single_file.py
parallel_text_viewer/html_templates/: chapter.css  chapter.html  chapter.js  common.css  common.js  index.css  index.html  index.js
parallel_text_viewer/templates/: __init__.py  chapter_template.py  common_template.py  html_template.py  index_template.py  renderer.py  state_manager.py
parallel_text_viewer/templates/html/: chapter.html  chapter.js  common.css  common.js  index.html  index.js  state_manager.js
parallel_text_viewer/utils/: __init__.py  file_utils.py  image_utils.py  path_utils.py
scripts/: README.md  build_all.py  build_from_data.py  serve.py  verify_config_v2.py
tests/: test_build_api.py  test_config_v2_integration.py  test_image_copy.py
