[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "parallel-text-viewer"
version = "0.6.0"
description = "A tool for generating offline HTML viewers from parallel text files. Provides both CLI and programmatic API for building and organizing bilingual books."
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "LoveElysia1314", email = "de.zqr@outlook.com"}
]
keywords = ["bilingual", "text", "viewer", "html"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Chinese (Simplified)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Editors",
    "Topic :: Multimedia",
]

[project.urls]
Homepage = "https://github.com/LoveElysia1314/parallel-text-viewer"
Repository = "https://github.com/LoveElysia1314/parallel-text-viewer.git"
"Bug Tracker" = "https://github.com/LoveElysia1314/parallel-text-viewer/issues"
[project.scripts]
parallel-text-viewer = "parallel_text_viewer.__main__:main"

[tool.setuptools]
packages = ["parallel_text_viewer"]
package-dir = {"" = "."}

[tool.setuptools.package-data]
parallel_text_viewer = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py37']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
